--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       sizes="32x32"
       href="img/barcode-favicon.png"
     />
+    <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
